# goit-datascience-hw-03

./: .env.example  .gitignore  authors.json  main.py  pyproject.toml
