[tool.poetry]
name = "hw03"
version = "0.1.0"
description = "goit homework 03"
authors = ["PavloTar <sg.pavlot@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.3"
requests = "^2.31.0"
pymongo = "^4.6.2"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
